--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -107,7 +107,7 @@
   "credentialPresentConfirm": "Select credential(s)",
   "credentialPresentCancel": "Reject",
   "credentialPickPresent": "Present",
-  "credentialPickSelect": "Choose one or more credentials from your wallet to present",
+  "credentialPickSelect": "Choose one or more credentials from your wallet to present, or select a *single* credential from which to selectivly disclose a subset of the fields.",
   "credentialReceiveTitle": "Credential Offer",
   "credentialReceiveHost": "wants to send you a credential",
   "credentialReceiveConfirm": "Add to wallet",
