Shorten link text

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -94,11 +94,11 @@
   "onBoardingGenButton": "Generate",
   "onBoardingSuccessTitle": "Identifier Created",
   "onBoardingSuccessButton": "Continue",
-  "credentialDetailShowDid": "Show\nDID",
+  "credentialDetailShowDid": "DID",
   "credentialDetailShowDidTooltip": "Show the issuer's DID",
-  "credentialDetailShowChain": "Show\nChain",
+  "credentialDetailShowChain": "Chain",
   "credentialDetailShowChainTooltip": "Show the DID chain",
-  "credentialDetailShare": "Share\nQR code",
+  "credentialDetailShare": "Share",
   "credentialDetailShareTooltip": "Share credential UUID as QR code",
   "credentialDetailDelete": "Delete credential",
   "credentialDetailDeleteConfirmationDialog": "Do you really want to delete this credential?",
